Before create database, Before that I shoud configure relations and column specifications

--- a/RiceMill.Api/appsettings.json
+++ b/RiceMill.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RiceMill": "Data Source=.\\Sql2017; Initial Catalog=RiceMill; Persist Security Info=True; User Id=sa; Password=master123; Integrated Security=False; Connect Timeout=60; TrustServerCertificate=True"
+  }
 }
