--- a/RiceMill.Ui/RiceMill.Ui.csproj
+++ b/RiceMill.Ui/RiceMill.Ui.csproj
@@ -49,7 +49,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.7">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\RiceMill.Application\RiceMill.Application.csproj" />
+	  <ProjectReference Include="..\RiceMill.Infrastructure\RiceMill.Infrastructure.csproj" />
+	  <ProjectReference Include="..\RiceMill.Persistence\RiceMill.Persistence.csproj" />
 	</ItemGroup>
 
 </Project>
