Add Serilog, Add Middlewares, Complete Cache Service, Use UserActivity, Change enum column in database, and add migration

--- a/RiceMill.Api/appsettings.json
+++ b/RiceMill.Api/appsettings.json
@@ -8,5 +8,26 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RiceMill": "Data Source=.\\Sql2017; Initial Catalog=RiceMill; Persist Security Info=True; User Id=sa; Password=master123; Integrated Security=False; Connect Timeout=60; TrustServerCertificate=True"
+  },
+  "Serilog": {
+    "SelfLog": true,
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {NewLine}{Exception}",
+          "rollingInterval": "Minute"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
