--- a/RiceMill.Api/appsettings.json
+++ b/RiceMill.Api/appsettings.json
@@ -10,24 +10,19 @@
     "RiceMill": "Data Source=.\\Sql2017; Initial Catalog=RiceMill; Persist Security Info=True; User Id=sa; Password=master123; Integrated Security=False; Connect Timeout=60; TrustServerCertificate=True"
   },
   "Serilog": {
-    "SelfLog": true,
+    "Using": [ "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
+      "Default": "Information"
     },
     "WriteTo": [
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/log-.txt",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} {NewLine}{Exception}",
-          "rollingInterval": "Minute"
+          "path": "Logs/Log-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
         }
       }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    ]
   }
 }
