--- a/RiceMill.Api/appsettings.Development.json
+++ b/RiceMill.Api/appsettings.Development.json
@@ -4,5 +4,25 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RiceMill": "Data Source=.\\Sql2017; Initial Catalog=RiceMill; Persist Security Info=True; User Id=sa; Password=master123; Integrated Security=False; Connect Timeout=60; TrustServerCertificate=True"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Log-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+        }
+      }
+    ]
   }
 }
