Finalize Serilog and middlewares

--- a/RiceMill.Api/appsettings.Development.json
+++ b/RiceMill.Api/appsettings.Development.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RiceMill": "Data Source=.\\Sql2017; Initial Catalog=RiceMill; Persist Security Info=True; User Id=sa; Password=master123; Integrated Security=False; Connect Timeout=60; TrustServerCertificate=True"
@@ -12,7 +6,7 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Information"
+      "Default": "Error"
     },
     "WriteTo": [
       {
@@ -24,5 +18,6 @@
         }
       }
     ]
-  }
+  },
+  "Serilog:MinimumLevel:Override:Microsoft.EntityFrameworkCore.Database.Command": "Warning"
 }
