Almost complete Apis

--- a/RiceMill.Api/RiceMill.Api.csproj
+++ b/RiceMill.Api/RiceMill.Api.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <DocumentationFile></DocumentationFile>
+    <DocumentationFile>bin\Debug\net7.0\RiceMill.Api.xml</DocumentationFile>
  </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
