--- a/RiceMill.Ui/Platforms/Android/AndroidManifest.xml
+++ b/RiceMill.Ui/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.Dordaneh.RiceMill" android:versionCode="1001" android:versionName="1.0.0.1">
-	<application android:allowBackup="true" android:supportsRtl="true" android:label="دردانه"></application>
+	<application android:allowBackup="true" android:supportsRtl="true" android:label="Dordaneh" android:icon="@mipmap/appicon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
