--- a/RiceMill.Persistence/RiceMill.Persistence.csproj
+++ b/RiceMill.Persistence/RiceMill.Persistence.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Configurations\DeliveryRiceThreshingConfiguration.cs" />
+    <Compile Remove="Configurations\DryerHistoryInputLoadConfiguration.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
       <PrivateAssets>all</PrivateAssets>
